Wed Mar 28 17:39:04 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_str2cstr): warn if string contains \0 and length
	  value is ignored.

Wed Mar 28 15:00:31 2001  K.Kosako  <kosako@sofnec.co.jp>

	* class.c (rb_singleton_class_clone): should copy class constant
	  table as well.

Wed Mar 28 15:03:23 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_include_module): sometimes cache was mistakenly left
	  uncleared - based on the patch by K.Kosako.

Wed Mar 28 09:52:33 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/Makefile.sub: disable global optimization.

Tue Mar 27 15:00:54 2001  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (rb_mod_define_method): should have clear method cache.

	* eval.c (rb_mod_define_method): should have raised exception for
	  type error.

Tue Mar 27 14:48:17 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.h: changed "extern INLINE" to "static inline".

Mon Mar 26 23:19:33 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* time.c (rb_strftime): check whether strftime returns empty string.

Mon Mar 26 18:14:47 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (rb_glob_helper): part of 1.7 globber backported to proper
	  following of symlinks.

Mon Mar 26 17:21:07 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c: remove TMP_PROTECT_END to prevent C_ALLOCA crash.

Mon Mar 26 14:04:41 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/Win32API/Win32API.c: remove Init_win32api().

Sat Mar 24 23:44:50 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ev_const_defined): should ignore toplevel cbase (Object).

	* eval.c (ev_const_get): ditto.

Fri Mar 23 12:18:44 2001  SHIROYAMA Takayuki  <psi@fortune.nest.or.jp>

	* ext/curses/curses.c: curses on Mac OS X public beta does not
	  have _maxx etc.

Fri Mar 23 10:50:31 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (w_object): should truncate trailing zero short for
	  bignums.
